apply plugin: 'com.android.application'
apply plugin: 'me.tatarka.retrolambda'
apply from: 'tinker-support.gradle'
apply plugin: 'walle'

/*
def keystorePropertiesFile = rootProject.file("keystore.properties")

def keystoreProperties = new Properties()
keystoreProperties.load(new FileInputStream(keystorePropertiesFile))

*/


android {
    compileSdkVersion 25
    buildToolsVersion "25.0.0"
    defaultConfig {
        applicationId "cn.com.stableloan"
        minSdkVersion 16
        targetSdkVersion 23
        versionCode 10
        multiDexEnabled true
        versionName "2.1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        ndk {
            //设置支持的SO库架构
            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
        }
    }
    sourceSets {
        main {
            jniLibs.srcDirs = ['libs']
        }
    }

    signingConfigs {

        release {
            v1SigningEnabled true
            v2SigningEnabled true
            storeFile file("/Users/apple/Documents/文件/安卓.jks")
            storePassword "000000"
            keyAlias "安卓"
            keyPassword "000000"
        }
        /*    config {
            v1SigningEnabled true
            v2SigningEnabled true
            keyAlias keystoreProperties['keyAlias']
            keyPassword keystoreProperties['keyPassword']
            storeFile file(keystoreProperties['storeFile'])
            storePassword keystoreProperties['storePassword']
        }*/
    }
    packagingOptions {
        exclude 'META-INF/rxjava.properties'
    }
    dexOptions {
        javaMaxHeapSize "4g"
    }
    buildTypes {
        release {
            minifyEnabled true
            shrinkResources true
            signingConfig signingConfigs.release
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    dataBinding {
        enabled = true
    }
    walle {
        // 指定渠道包的输出路径
        apkOutputFolder = new File("${project.buildDir}/outputs/channels");
        // 定制渠道包的APK的文件名称
        apkFileNameFormat = '${channel}-v${versionName}-${buildTime}.apk';
        // 渠道配置文件
        channelFile = new File("${project.getProjectDir()}/channel")
    }
    repositories {
        flatDir {
            dirs 'libs'
        }
    }
    lintOptions {
        disable 'MissingTranslation'
    }
    compileOptions {
        targetCompatibility JavaVersion.VERSION_1_8
        sourceCompatibility JavaVersion.VERSION_1_8
    }
}



dependencies {
    compile fileTree(include: ['*.jar'], dir: 'libs')
    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    compile project(path: ':pager-bottom-tab-strip')
    compile project(path: ':validate')
    compile(name: 'gt3geetest-sdk', ext: 'aar')
    compile(name: 'crawlerlib-1.4.2', ext: 'aar')
    compile(name: 'moxie-client-1.3.2', ext: 'aar')
    //SystembarStatus

    // okGo

    //可以单独使用，不需要依赖下方的扩展包

    //RxJava扩展支持，根据需要添加

    // Gilde

    //SystembarStatus

    //  compile 'com.flyco.systembar:FlycoSystemBar_Lib:1.0.0@aar'

    // font

    //Status

    //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.1.9

    //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
    compile files('libs/BaiduLBS_Android.jar')
    //compile 'uk.co.chrisjenx:calligraphy:2.3.0'

    //极验验证
    compile files('libs/commons-codec-1.5.jar')
    /* compile 'com.squareup.retrofit:retrofit:1.9.0'
                                compile 'io.reactivex:rxandroid:1.0.1'wq
                                compile 'io.reactivex:rxjava:1.0.14'*/

    // walle
    compile files('libs/mta-sdk-1.6.2.jar')
    compile files('libs/open_sdk_r5509.jar')
    compile files('libs/Samsung_Fingerprint_Pass-v1.2.2.jar')
    compile files('libs/Samsung_Fingerprint_Sdk-v1.0.0.jar')

    compile 'com.android.support:multidex:1.0.1'
    compile 'com.squareup.okhttp:okhttp:2.5.0'
    compile 'com.contrarywind:Android-PickerView:3.2.5'
    compile 'com.github.lygttpod:SuperTextView:1.1.2'
    compile 'com.android.support:support-v4:25.3.1'
    compile 'com.android.support:cardview-v7:25.3.1'
    compile 'com.android.support:appcompat-v7:25.3.1'
    compile 'com.android.support:design:25.3.1'
    compile 'com.lzy.net:okgo:2.1.4'
    compile 'com.lzy.net:okrx:0.1.2'
    compile 'com.lzy.net:okserver:1.1.3'
    compile 'jp.wasabeef:glide-transformations:2.0.2'
    compile 'com.jakewharton:butterknife:7.0.1'
    compile 'cn.bingoogolapple:bga-banner:2.1.6@aar'
    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.12'
    compile 'com.android.support:recyclerview-v7:25.3.1'
    compile 'com.gyf.barlibrary:barlibrary:2.1.4'
    compile 'com.github.ybq:Android-SpinKit:1.0.2'
    compile 'com.google.code.gson:gson:2.3.1'
    compile 'com.github.chenBingX:SuperTextView:v1.3'
    compile 'com.github.mancj:SlideUp-Android:2.2.5'
    compile 'com.github.czy1121:update:1.1.1'
    compile 'com.kaopiz:kprogresshud:1.0.5'
    compile 'com.tencent.bugly:crashreport_upgrade:1.3.1'
    compile 'com.tencent.bugly:nativecrashreport:latest.release'
    compile 'com.zhuge.analysis:zhugeio:latest.integration'
    compile 'com.github.hackware1993:MagicIndicator:1.5.0'
    compile 'com.andreabaccega:android-form-edittext:1.3.+'
    compile 'com.yanzhenjie:permission:1.0.8'
    compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.0'
    compile 'com.qiniu:qiniu-android-sdk:7.3.+'
    compile 'org.greenrobot:eventbus:3.0.0'
    compile 'com.github.HotBitmapGG:RingProgressBar:V1.2.3'
    compile 'com.zaaach:citypicker:1.1'
    compile 'com.squareup.retrofit:retrofit:1.9.0'
    compile 'io.reactivex:rxandroid:1.0.1'
    compile 'io.reactivex:rxjava:1.0.14'
    compile 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:1.1.6'
    compile 'com.android.support.constraint:constraint-layout:1.0.2'
    compile 'com.zhy:autolayout:+'
    compile 'com.jakewharton.rxbinding2:rxbinding:2.+'
    compile 'cn.yipianfengye.android:ad-library:1.0'
    compile 'com.meituan.android.walle:library:1.1.5'
    compile 'com.google.android:flexbox:0.3.0-alpha2'
    compile 'com.umeng.analytics:analytics:latest.integration'
    testCompile 'junit:junit:4.12'

    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3.1' // or 1.4-beta1
    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1' // or 1.4-beta1
    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1' // or 1.4-beta1

}
